Improve handling of errors associated with --enable-preview